<resources>
    <string name="app_name">Qualtec Check In</string>
    <string name="login">Login</string>
    <string name="register">Registrar</string>
    <string name="email">Email</string>
    <string name="name">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="enter">Entrada</string>
    <string name="exit">Salida</string>
    <string name="register_here">¿Sin credenciales? <u>Registrate aqui</u></string>
    <string name="logout"><u>Cerrar sesión</u></string>
    <string name="action_bar_title">Registro de Asistencia</string>
    <string name="configuration">Configuración</string>
    <string name="email_to_send">Email para enviar asistencia</string>
    <string name="save">Guardar</string>
    <string name="pref_summ_email">A este correo se enviará el resumen de la asistencia</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
