<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal|center_vertical"
    tools:context=".CheckInActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Usuario Autenticado:"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/check_in_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="User"
        android:layout_marginBottom="30dp"
        android:textSize="30dp"/>

    <Button
        android:id="@+id/check_in_enter"
        android:textSize="20dp"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"/>

    <Button
        android:id="@+id/check_in_exit"
        android:textSize="20dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"/>

    <TextView
        android:id="@+id/check_in_logout"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>

</LinearLayout>